--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,10 +20,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "request": "^2.88.2",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
-    "@types/request": "^2.48.8"
+    "@types/request": "^2.48.8",
+    "@types/xml2json": "^0.11.4"
   }
 }
