--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,8 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "request": "^2.88.2",
-    "typescript": "4.9.5",
-    "xml2json": "^0.12.0"
+    "typescript": "4.9.5"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
